Fix scrollbar in discovery

--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -67,6 +67,7 @@ body > .ember-view {
 #discovery-details-tab > .tab-content {
   @extend .d-flex;
   flex: 1 1 100%;
+  overflow-y: auto;
 }
 
 #discovery-details-tab > .tab-content > .tab-pane {
